--- a/app.wxss
+++ b/app.wxss
@@ -2,14 +2,7 @@
 @import 'wxss/button.wxss';
 @import 'wxss/text.wxss';
 @import 'wxss/size.wxss';
-@import 'wxss/element.wxss';
-@import 'wxss/component.wxss';
-
-page {
-  padding-top: 40rpx;
-  padding-bottom: 40rpx;
-  background-image: url(http://image.potatofield.cn/18-10-29/18567134.jpg);
-  background-size: cover;
-  background-attachment: fixed;
-  background-position: bottom;
-}
+@import 'wxss/tile.wxss';
+@import 'wxss/panel.wxss';
+@import 'wxss/separator.wxss';
+@import 'wxss/input.wxss'
