--- a/pages/calculator/calculator.wxss
+++ b/pages/calculator/calculator.wxss
@@ -1,1 +1,15 @@
-/* pages/calculator/calculator.wxss */
+.button-image {
+  height: 60%;
+}
+
+.depth {
+  width: 100%;
+  height: 100%;
+  background-color: #34a853;
+}
+
+.field {
+  width: 100%;
+  height: 100%;
+  background-color: #fbbc05;
+}
