--- a/wxss/container.wxss
+++ b/wxss/container.wxss
@@ -1,9 +1,8 @@
 .container {
-  width: 80%;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 50rpx;
-  margin-bottom: 50rpx;
+  margin-left: 30rpx;
+  margin-right: 30rpx;
+  margin-top: 30rpx;
+  margin-bottom: 30rpx;
 }
 
 .row-flex {
