--- a/pages/calculator/field/field.wxss
+++ b/pages/calculator/field/field.wxss
@@ -1,7 +1,3 @@
-.frame {
-  margin-bottom: -15rpx;
-}
-
 .placeholder {
   margin: 0;
 }
@@ -20,6 +16,14 @@
 
 .input-focused {
   border-bottom-color: #fbbc05;
+}
+
+.length {
+  padding-right: 2rem;
+}
+
+.field {
+  padding-right: 2rem;
 }
 
 .length::after {
