--- a/pages/image/momentsImage/momentsImage.wxss
+++ b/pages/image/momentsImage/momentsImage.wxss
@@ -1,1 +1,68 @@
-/* pages/image/imageResizer/imageResizer.wxss */
+.subtitle {
+  color: #34a853;
+}
+
+.main-button {
+  background-color: #34a853;
+}
+
+.side-button {
+  color: #34a853;
+}
+
+.select {
+  box-sizing: border-box;
+  width: 100%;
+  height: 60vw;
+  border-style: dashed;
+  border-color: #e1e1e1;
+  border-width: 10rpx;
+  border-radius: 30rpx;
+  background-color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  color: #e1e1e1;
+}
+
+.holder {
+  width: 100%;
+  height: 100%;
+  justify-content: flex-start
+}
+
+.preview {
+  width: 30vw;
+  height: 100%;
+  background-color: #000000;
+}
+
+.info-panel {
+  flex-grow: 1;
+}
+
+.text-holder {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  flex-grow: 1;
+}
+
+.image {
+  position: fixed;
+  top: 9999px;
+}
+
+.attribute {
+  text-align: left;
+  color: #34a853;
+  width: 30%;
+  margin-left: 30rpx;
+  margin-right: 30rpx;
+}
+
+.value {
+  text-align: left;
+  width: 70%;
+}
