--- a/pages/index/help/help.wxml
+++ b/pages/index/help/help.wxml
@@ -5,10 +5,10 @@
 </view>
 <view class='container'>
   <view class='subtitle'>
-    <text>朋友圈免压图片生成器</text>
+    <text>朋友圈高清图片生成器</text>
   </view>
   <view class='content'>
-    <text>在微信朋友圈发布的图片会经过压缩，造成图片质量下降。使用本模块处理过的图片在发布到朋友圈时不会被微信再次压缩，因此您可以使用本模块对图片进行处理，以便在朋友圈发布高清图片。</text>
+    <text>在微信朋友圈发布的图片会经过压缩，造成图片质量下降。使用本模块处理过的图片在被微信压缩时会保留更高的分辨率，因此您可以使用本模块对图片进行处理，以便在朋友圈发布高清图片。</text>
   </view>
 </view>
 <view class='container row-flex'>
@@ -52,7 +52,7 @@
     <text>图片自定义加水印工具</text>
   </view>
   <view class='content'>
-    <text>这是占位符</text>
+    <text>您可以使用本模块便捷地为您的图片添加水印。您可以直接使用预设的模板快速添加水印，也可以全方位地定制水印的内容，尺寸，位置和颜色等，还可以将自定义的水印保存为模板。</text>
   </view>
 </view>
 <view class='container row-flex'>
@@ -74,7 +74,7 @@
     <text>景深范围计算工具</text>
   </view>
   <view class='content'>
-    <text>这是占位符</text>
+    <text>您可以使用本模块进行与景深相关的计算，包括跟参数计算景深及根据期望的景深反求所需的参数。另外，根据不同场合的需求，您还可以自行选择简单模式及专家模式。</text>
   </view>
 </view>
 <view class='container row-flex'>
@@ -96,7 +96,7 @@
     <text>焦距视角换算工具</text>
   </view>
   <view class='content'>
-    <text>这是占位符</text>
+    <text>本模块提供镜头焦距与视角的双向换算功能。您可以输入镜头焦距计算其视角，也可以输入镜头视角计算其焦距。需要注意的是，本模块不适用于非正切投影镜头（鱼眼镜头）。</text>
   </view>
 </view>
 <view class='container row-flex'>
@@ -122,7 +122,7 @@
     <text>当前版本</text>
   </view>
   <view class='content'>
-    <text>2019年1月23日 0.1.190123 Beta版</text>
+    <text>2019年1月28日 0.6.190128 Beta版</text>
   </view>
   <view class='subtitle'>
     <text>历史版本</text>
@@ -147,10 +147,19 @@
           <text>版本历史</text>
         </view>
         <view class='content'>
-          <text>2019年12月23日 0.1.190123 Beta版</text>
+          <text>2019年1月27日 0.5.190127 Beta版</text>
         </view>
         <view class='content'>
-          <text>2019年12月24日 0.2.190124 Beta版</text>
+          <text>2019年1月26日 0.4.190126 Beta版</text>
+        </view>
+        <view class='content'>
+          <text>2019年1月25日 0.3.190125 Beta版</text>
+        </view>
+        <view class='content'>
+          <text>2019年1月24日 0.2.190124 Beta版</text>
+        </view>
+        <view class='content'>
+          <text>2019年1月23日 0.1.190123 Beta版</text>
         </view>
       </scroll-view>
     </view>
@@ -167,10 +176,10 @@
     <view class='container'>
       <scroll-view scroll-y='true' class='panel-text-holder'>
         <view class='subtitle'>
-          <text>朋友圈免压图片生成器</text>
+          <text>朋友圈高清图片生成器</text>
         </view>
         <view class='content'>
-          <text>这是占位符</text>
+          <text>本模块工作的原理是为图片添加透明的边框，使其长宽比大于二比一。由于微信朋友圈对于长宽比大于二比一的图片允许更高的分辨率，因此经过处理的图片在发布朋友圈时可以避免被再次压缩，保证相对清晰的画质。</text>
         </view>
       </scroll-view>
     </view>
@@ -190,7 +199,7 @@
           <text>常用比例裁剪工具</text>
         </view>
         <view class='content'>
-          <text>这是占位符</text>
+          <text>本模块内置的预设比例包括单反相机常用比例（3:2），智能手机常用比例（4:3），标准宽荧幕比例（16:9），全面屏宽荧幕比例（2:1），超宽宽荧幕比例（21:9），电影宽荧幕比例（2.35:1），IMAX电影宽荧幕比例（2.4:1）和正方形比例（1:1）。</text>
         </view>
       </scroll-view>
     </view>
@@ -210,7 +219,7 @@
           <text>图片自定义加水印工具</text>
         </view>
         <view class='content'>
-          <text>这是占位符</text>
+          <text>由于微信小程序纯前端处理的性能限制，如果您选择的照片尺寸过大，添加水印的同时会对图片的尺寸进行缩小。本模块允许的最大尺寸为2400万像素，覆盖了大部分全画幅相机和绝大部分APS-C画幅相机，因此通常情况下您的图片不会被压缩。</text>
         </view>
       </scroll-view>
     </view>
@@ -230,7 +239,7 @@
           <text>景深范围计算工具</text>
         </view>
         <view class='content'>
-          <text>这是占位符</text>
+          <text>根据参数计算景深时需要输入物距，焦距及光圈三项参数，专家模式下还需选择画幅和弥散圆半径。由景深反求参数时可以根据任意两项参数反推另一项参数。</text>
         </view>
       </scroll-view>
     </view>
@@ -250,7 +259,7 @@
           <text>焦距视角换算工具</text>
         </view>
         <view class='content'>
-          <text>这是占位符</text>
+          <text>视角分为水平视角，垂直视角和对角线视角，您可以输入其中的任意一项进行计算。视角的可输入范围为0°到180°，焦距的可输入范围为0mm到正无穷，但焦距过短或视角过大（处于鱼眼镜头范围内）时计算结果可能不准确。</text>
         </view>
       </scroll-view>
     </view>
