--- a/pages/calculator/field/field.wxml
+++ b/pages/calculator/field/field.wxml
@@ -5,10 +5,10 @@
 </view>
 <view class='container row-flex'>
   <view class='half'>
-    <button class='{{modeButton.equivalent}}' bindtap='setMode' id='equivalent'>等效焦距</button>
+    <button class="select-button {{mode == 'equivalent' ? 'main-button' : 'side-button'}}" bindtap='setMode' id='equivalent'>等效焦距</button>
   </view>
   <view class='half'>
-    <button class='{{modeButton.real}}' bindtap='setMode' id='real'>实际焦距</button>
+    <button class="select-button {{mode == 'real' ? 'main-button' : 'side-button'}}" bindtap='setMode' id='real'>实际焦距</button>
   </view>
 </view>
 <view wx:if="{{mode == 'real'}}">
@@ -19,12 +19,12 @@
   </view>
   <scroll-view scroll-x='true' class='scroll-button-set-holder'>
     <view class='scroll-button-set'>
-      <button class='scroll-button {{frameButton.fullFrame}}' bindtap='setFrame' id='fullFrame'>全画幅</button>
-      <button class='scroll-button {{frameButton.apsC}}' bindtap='setFrame' id='apsC'>标准APC-C画幅</button>
-      <button class='scroll-button {{frameButton.apsCanonC}}' bindtap='setFrame' id='apsCanonC'>佳能APC-C画幅</button>
-      <button class='scroll-button {{frameButton.apsCanonH}}' bindtap='setFrame' id='apsCanonH'>佳能APC-H画幅</button>
-      <button class='scroll-button {{frameButton.mft}}' bindtap='setFrame' id='mft'>Micro 4/3 画幅</button>
-      <button class='scroll-button {{frameButton.oneInch}}' bindtap='setFrame' id='oneInch'>一英寸画幅</button>
+      <button class="scroll-button select-button {{frame == 'fullFrame' ? 'main-button' : 'side-button'}}" bindtap='setFrame' id='fullFrame'>全画幅</button>
+      <button class="scroll-button select-button {{frame == 'apsC' ? 'main-button' : 'side-button'}}" bindtap='setFrame' id='apsC'>标准APC-C画幅</button>
+      <button class="scroll-button select-button {{frame == 'apsCanonC' ? 'main-button' : 'side-button'}}" bindtap='setFrame' id='apsCanonC'>佳能APC-C画幅</button>
+      <button class="scroll-button select-button {{frame == 'apsCanonH' ? 'main-button' : 'side-button'}}" bindtap='setFrame' id='apsCanonH'>佳能APC-H画幅</button>
+      <button class="scroll-button select-button {{frame == 'mft' ? 'main-button' : 'side-button'}}" bindtap='setFrame' id='mft'>Micro 4/3 画幅</button>
+      <button class="scroll-button select-button {{frame == 'oneInch' ? 'main-button' : 'side-button'}}" bindtap='setFrame' id='oneInch'>一英寸画幅</button>
     </view>
   </scroll-view>
 </view>
@@ -36,25 +36,25 @@
     <view class='one-third content'>
       <text>焦距</text>
     </view>
-    <input class='length {{inputs.length}}' value='{{length}}' placeholder='请输入焦距' placeholder-class='content placeholder' type='digit' bindfocus='focus' bindblur='blur' bindinput='input' id='length'></input>
+    <input class="length {{focus == 'length' ? 'input-focused' : 'input-blurred'}}" value='{{length}}' placeholder='请输入焦距' placeholder-class='content input-placeholder' type='digit' bindfocus='focus' bindblur='blur' bindinput='input' id='length'></input>
   </view>
   <view class='row-flex'>
     <view class='one-third content'>
       <text>水平视角</text>
     </view>
-    <input class='field {{inputs.horizontal}}' value='{{horizontal}}' placeholder='请输入水平视角' placeholder-class='content placeholder' type='digit' bindfocus='focus' bindblur='blur' bindinput='input' id='horizontal'></input>
-  </view>
+    <input class="field {{focus == 'horizontal' ? 'input-focused' : 'input-blurred'}}" value='{{horizontal}}' placeholder='请输入水平视角' placeholder-class='content input-placeholder' type='digit' bindfocus='focus' bindblur='blur' bindinput='input' id='horizontal'></input>
+    </view>
   <view class='row-flex'>
     <view class='one-third content'>
       <text>垂直视角</text>
     </view>
-    <input class='field {{inputs.vertical}}' value='{{vertical}}' placeholder='请输入垂直视角' placeholder-class='content placeholder' type='digit' bindfocus='focus' bindblur='blur' bindinput='input' id='vertical'></input>
+    <input class="field {{focus == 'vertical' ? 'input-focused' : 'input-blurred'}}" value='{{vertical}}' placeholder='请输入垂直视角' placeholder-class='content input-placeholder' type='digit' bindfocus='focus' bindblur='blur' bindinput='input' id='vertical'></input>
   </view>
   <view class='row-flex'>
     <view class='one-third content'>
       <text>对角线视角</text>
     </view>
-    <input class='field {{inputs.diagonal}}' value='{{diagonal}}' placeholder='请输入对角线视角' placeholder-class='content placeholder' type='digit' bindfocus='focus' bindblur='blur' bindinput='input' id='diagonal'></input>
+    <input class="field {{focus == 'diagonal' ? 'input-focused' : 'input-blurred'}}" value='{{diagonal}}' placeholder='请输入对角线视角' placeholder-class='content input-placeholder' type='digit' bindfocus='focus' bindblur='blur' bindinput='input' id='diagonal'></input>
   </view>
 </view>
 <view class='container'>
