--- a/wxss/button.wxss
+++ b/wxss/button.wxss
@@ -34,6 +34,22 @@ button::after {
   transition: 0.5s;
 }
 
+.upload-button {
+  box-sizing: border-box;
+  width: 100%;
+  height: 60vw;
+  border-style: dashed;
+  border-color: #e1e1e1;
+  border-width: 10rpx;
+  border-radius: 30rpx;
+  background-color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  color: #e1e1e1;
+}
+
 .text-button {
   padding-left: 30rpx;
   padding-right: 30rpx;
@@ -105,6 +121,10 @@ button::after {
   width: 15rpx;
   background-image: linear-gradient(to right, rgba(255,255,255,0), rgba(255,255,255,1));
   z-index: 10;
+}
+
+.select-button {
+  border-radius: 40rpx;
 }
 
 .button-mask {
