--- a/pages/index/help/help.wxml
+++ b/pages/index/help/help.wxml
@@ -122,7 +122,7 @@
     <text>当前版本</text>
   </view>
   <view class='content'>
-    <text>2019年1月28日 0.6.190128 Beta版</text>
+    <text>2019年1月29日 0.7.190129 Beta版</text>
   </view>
   <view class='subtitle'>
     <text>历史版本</text>
@@ -145,6 +145,9 @@
       <scroll-view scroll-y='true' class='panel-text-holder'>
         <view class='subtitle'>
           <text>版本历史</text>
+        </view>
+        <view class='content'>
+          <text>2019年1月28日 0.6.190128 Beta版</text>
         </view>
         <view class='content'>
           <text>2019年1月27日 0.5.190127 Beta版</text>
